<resources>
    <string name="app_name">04 - Ejercicio Inmobiliaria</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="calle">Calle</string>
    <string name="n_mero">Número</string>
    <string name="c_digo_postal">Código Postal</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
</resources>